--- a/src/KochSnowflake/KochSnowflakeSettings.css
+++ b/src/KochSnowflake/KochSnowflakeSettings.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 20px;
+    margin-right: 20px;
 }
 
 .settings__input {
